bzip2: add -p option to show progress
https://bugs.gentoo.org/82192

Signed-off-by: Marty E. Plummer <hanetzer@protonmail.com>

--- a/bzip2.1
+++ b/bzip2.1
@@ -235,6 +235,10 @@ less), use \-s for everything.  See MEMORY MANAGEMENT below.
 Suppress non-essential warning messages.  Messages pertaining to
 I/O errors and other critical events will not be suppressed.
 .TP
+.B \-p \-\-show\-progress
+Show percentage of input\-file done and while compressing show the percentage
+of the original file the new file is.
+.TP
 .B \-v --verbose
 Verbose mode -- show the compression ratio for each file processed.
 Further \-v's increase the verbosity level, spewing out lots of
